force-app/main/default/objects/AM_Vehicle_Repair_Details__c/AM_Vehicle_Repair_Details__c.object-meta.xml
<CustomObject>
    <label>AM Vehicle Repair Details</label>
    <nameField>
        <displayFormat>AMVRD-{0000}</displayFormat>
        <label>AM Vehicle  Repair Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Vehicle Repair Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>