force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Estimated_Repair_Detail_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Estimated_Repair_Detail_Amount__c</fullName>
    <label>AM Estimated Repair Detail Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>