force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Estimated_Vehicle_Repair_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Estimated_Vehicle_Repair_Date__c</fullName>
    <label>AM Estimated Vehicle Repair Date</label>
    <type>Date</type>
</CustomField>