force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Vehicle_Repair_Description__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Repair_Description__c</fullName>
    <label>AM Vehicle Repair Description</label>
    <type>TextArea</type>
</CustomField>