force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Vehicle_Repair_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Repair_Sub_Type__c</fullName>
    <label>AM Vehicle Repair Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AM_Vehicle_Repair_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Bags</fullName>
            </value>
            <value>
                <fullName>AC Repair</fullName>
            </value>
            <value>
                <fullName>Battery Work</fullName>
            </value>
            <value>
                <fullName>Breaks</fullName>
            </value>
            <value>
                <fullName>Denting</fullName>
            </value>
            <value>
                <fullName>Door Handles</fullName>
            </value>
            <value>
                <fullName>Head Lights</fullName>
            </value>
            <value>
                <fullName>Interior Lights</fullName>
            </value>
            <value>
                <fullName>Mirrors</fullName>
            </value>
            <value>
                <fullName>Music System</fullName>
            </value>
            <value>
                <fullName>Paint Required</fullName>
            </value>
            <value>
                <fullName>Seat Covers</fullName>
            </value>
            <value>
                <fullName>Seats</fullName>
            </value>
            <value>
                <fullName>Tyre Change</fullName>
            </value>
            <value>
                <fullName>Wheel Allignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>