force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Vehicle_Repair_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Repair_Type__c</fullName>
    <label>AM Vehicle Repair Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Rubbing And Polishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>