force-app/main/default/objects/AM_Vehicle_Repair_Details__c/fields/AM_Vehicle_Repairs__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Repairs__c</fullName>
    <label>AM Vehicle Repairs</label>
    <referenceTo>AM_Vehicle_Repairs__c</referenceTo>
    <relationshipLabel>AM Vehicle Repair Details</relationshipLabel>
    <relationshipName>AM_Vehicle_Repair_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>