force-app/main/default/objects/AM_Vehicle_Repair_Details__c/validationRules/Estimated_repair_date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_repair_date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AM_Estimated_Vehicle_Repair_Date__c  &gt;  AM_Vehicle_Repairs__r.AM_Vehicle_Number__r.AM_Purchase_Date__c</errorConditionFormula>
    <errorMessage>Estimated Vehicle Date Should be Greater than Vehicle Purchase Date</errorMessage>
</ValidationRule>